Dibujo varios copos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Experimento Loco</title>
   </head>
   <body>
-    <canvas id="canvasId"></canvas>
+    <canvas id="canvasId" style="border:1px solid #000000;"></canvas>
 	<script type="text/javascript" src="resources/js/experimentoLoco.js"></script>
   </body>
 </html>
